STERI016-413-regression-am: Fix text alignment issue in full-width card versio

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -92,6 +92,9 @@
 .cards > ul > li > .card-body > .card-section {
   display: flex;
   flex-direction: column;
+}
+
+.cards:not(.full-width) > ul > li > .card-body > .card-section {
   text-align: center;
 }
 
